longhorn-system/longhorn/templates/ingresses.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
  name: longhorn
  namespace: longhorn-system
spec:
  ingressClassName: nginx
  rules:
  - host: longhorn.csepulveda.net
    http:
      paths:
      - backend:
          service:
            name: longhorn-frontend
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - longhorn.csepulveda.net
    secretName: longhorn.csepulveda.net-tls
